[gd_scene load_steps=18 format=2]

[ext_resource path="res://entities/player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/player/knight_m_idle_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/player/knight_m_idle_anim_f1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/player/knight_m_idle_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/player/knight_m_idle_anim_f3.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/player/knight_m_hit_anim_f0.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/player/knight_m_run_anim_f0.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/player/knight_m_run_anim_f1.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/player/knight_m_run_anim_f2.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/player/knight_m_run_anim_f3.png" type="Texture" id=10]
[ext_resource path="res://assets/efx/light.png" type="Texture" id=11]
[ext_resource path="res://assets/sfx/footstep.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sfx/grunts.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sfx/swipe.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sfx/heal.wav" type="AudioStream" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 7 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 6 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
show_behind_parent = true
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 0.945098, 0.768627, 0.462745, 0.635294 )
light_mask = 0
position = Vector2( 8, 16 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
light_mask = 0
position = Vector2( 8, 8 )
z_index = 10
frames = SubResource( 2 )
animation = "idle"
frame = 1
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 8, 8 )
current = true
zoom = Vector2( 0.2, 0.2 )
limit_left = 0
limit_top = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 8.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="Light2D" type="Light2D" parent="."]
light_mask = 0
position = Vector2( 8, 16 )
texture = ExtResource( 11 )
texture_scale = 0.2
color = Color( 0.960784, 0.933333, 0.270588, 1 )
shadow_enabled = true

[node name="LightTimer" type="Timer" parent="Light2D"]
wait_time = 0.8
autostart = true

[node name="Tween" type="Tween" parent="Light2D"]

[node name="SfxFootstep" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, 1 )
stream = ExtResource( 12 )
bus = "Reverb"

[node name="SfxPain" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="SfxSwipe" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="SfxHeal" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
[connection signal="timeout" from="Light2D/LightTimer" to="." method="_on_LightTimer_timeout"]
